--- a/build.gradle
+++ b/build.gradle
@@ -4,13 +4,13 @@ plugins {
     id "io.freefair.lombok" version "6.0.0-m2"
 }
 
-def restAssuredVersion = "5.5.0",
+def restAssuredVersion = "5.3.0",
     allureRestAssuredVersion = "2.29.0",
-    selenideVersion = "7.5.1",
+    selenideVersion = "7.0.0",
     junitVersion = "5.11.1",
     slf4jVersion = "2.0.16",
     assertjVersion = "3.26.3",
-    allureSelenideVersion = "2.19.0",
+    allureSelenideVersion = "2.21.0",
     ownerVersion = "1.0.12",
     appiumVersion = "9.3.0"
 
@@ -18,13 +18,13 @@ def restAssuredVersion = "5.5.0",
 allure
         {
             report {
-                version.set(allureRestAssuredVersion)
+                version.set(allureSelenideVersion)
             }
             adapter {
                 aspectjWeaver.set(true)
                 frameworks {
                     junit5 {
-                        adapterVersion.set(allureRestAssuredVersion)
+                        adapterVersion.set(allureSelenideVersion)
                     }
                 }
             }
@@ -44,16 +44,14 @@ dependencies {
             "org.slf4j:slf4j-simple:$slf4jVersion",
             "io.rest-assured:rest-assured:$restAssuredVersion",
             "io.rest-assured:json-schema-validator:$restAssuredVersion",
-            "io.qameta.allure:allure-rest-assured:$allureRestAssuredVersion",
             "org.assertj:assertj-core:$assertjVersion",
             "com.codeborne:selenide:$selenideVersion",
             "io.qameta.allure:allure-selenide:$allureSelenideVersion",
             "org.aeonbits.owner:owner:$ownerVersion",
             "io.appium:java-client:$appiumVersion",
-            'org.aspectj:aspectjweaver:1.9.22.1'
+            'org.aspectj:aspectjweaver:1.9.22'
 
     )
-    testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine:5.11.1')
 }
 
 tasks.withType(Test) {
