--- a/build.gradle
+++ b/build.gradle
@@ -1,62 +1,48 @@
 plugins {
     id 'java-library'
     id 'io.qameta.allure' version '2.11.2'
-    id "io.freefair.lombok" version "6.0.0-m2"
 }
-
-def restAssuredVersion = "5.3.0",
-    allureRestAssuredVersion = "2.29.0",
-    selenideVersion = "7.0.0",
-    junitVersion = "5.11.1",
-    slf4jVersion = "2.0.16",
-    assertjVersion = "3.26.3",
-    allureSelenideVersion = "2.21.0",
-    ownerVersion = "1.0.12",
-    appiumVersion = "9.3.0"
-
-
-allure
-        {
-            report {
-                version.set(allureSelenideVersion)
-            }
-            adapter {
-                aspectjWeaver.set(true)
-                frameworks {
-                    junit5 {
-                        adapterVersion.set(allureSelenideVersion)
-                    }
-                }
-            }
-        }
-
-group = 'ru.maxcong'
-version = '1.0-SNAPSHOT'
-
 
 repositories {
     mavenCentral()
 }
 
+def aspectjWeaverVersion = "1.9.22",
+    selenideVersion = "6.13.0",
+    restAssuredVersion = "5.3.0",
+    allureVersion = "2.21.0",
+    junitVersion = "5.9.3",
+    slf4jVersion = "2.0.7"
+
+allure {
+    report {
+        version.set(allureVersion)
+    }
+    adapter {
+        aspectjWeaver.set(true)
+        frameworks {
+            junit5 {
+                adapterVersion.set(allureVersion)
+            }
+        }
+    }
+}
+
 dependencies {
     testImplementation(
-            "org.junit.jupiter:junit-jupiter:$junitVersion",
-            "org.slf4j:slf4j-simple:$slf4jVersion",
-            "io.rest-assured:rest-assured:$restAssuredVersion",
-            "io.rest-assured:json-schema-validator:$restAssuredVersion",
-            "org.assertj:assertj-core:$assertjVersion",
+            "org.aspectj:aspectjweaver:$aspectjWeaverVersion",
             "com.codeborne:selenide:$selenideVersion",
-            "io.qameta.allure:allure-selenide:$allureSelenideVersion",
-            "org.aeonbits.owner:owner:$ownerVersion",
-            "io.appium:java-client:$appiumVersion",
-            'org.aspectj:aspectjweaver:1.9.22'
-
+            "io.qameta.allure:allure-selenide:$allureVersion",
+            "io.appium:java-client:8.3.0",
+            "io.rest-assured:rest-assured:$restAssuredVersion",
+            "org.junit.jupiter:junit-jupiter:$junitVersion",
+            "org.slf4j:slf4j-simple:$slf4jVersion"
     )
 }
 
 tasks.withType(Test) {
     useJUnitPlatform()
-    systemProperties(System.getProperties())
+
     testLogging {
         lifecycle {
             events "started", "skipped", "failed", "standard_error", "standard_out"
