--- a/build.gradle
+++ b/build.gradle
@@ -40,16 +40,15 @@ repositories {
 
 dependencies {
     testImplementation(
-            "org.junit.jupiter:junit-jupiter:$junitVersion",
-            "org.slf4j:slf4j-simple:$slf4jVersion",
-            "io.rest-assured:rest-assured:$restAssuredVersion",
-            "io.rest-assured:json-schema-validator:$restAssuredVersion",
-            "org.assertj:assertj-core:$assertjVersion",
-            "com.codeborne:selenide:$selenideVersion",
-            "io.qameta.allure:allure-selenide:$allureSelenideVersion",
-            "org.aeonbits.owner:owner:$ownerVersion",
-            "io.appium:java-client:$appiumVersion",
-            'org.aspectj:aspectjweaver:1.9.22'
+             'org.aspectj:aspectjweaver:1.9.22',
+             "com.codeborne:selenide:$selenideVersion",
+             "io.qameta.allure:allure-selenide:$allureSelenideVersion",
+             "io.appium:java-client:$appiumVersion",
+             "io.rest-assured:rest-assured:$restAssuredVersion",
+             "org.junit.jupiter:junit-jupiter:$junitVersion",
+             "org.slf4j:slf4j-simple:$slf4jVersion",
+        
+
 
     )
 }
