--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 
 def restAssuredVersion = "5.3.0",
     allureRestAssuredVersion = "2.29.0",
-    selenideVersion = "7.0.0",
+    selenideVersion = "6.13.0",
     junitVersion = "5.11.1",
     slf4jVersion = "2.0.16",
     assertjVersion = "3.26.3",
@@ -48,7 +48,9 @@ dependencies {
              "org.junit.jupiter:junit-jupiter:$junitVersion",
              "org.slf4j:slf4j-simple:$slf4jVersion",
         
-
+        "io.rest-assured:json-schema-validator:$restAssuredVersion",
+        "org.aeonbits.owner:owner:$ownerVersion",
+        "org.assertj:assertj-core:$assertjVersion"
 
     )
 }
