--- a/build.gradle
+++ b/build.gradle
@@ -4,15 +4,14 @@ plugins {
     id "io.freefair.lombok" version "6.0.0-m2"
 }
 
-def restAssuredVersion = "5.3.0",
-    allureRestAssuredVersion = "2.29.0",
-    selenideVersion = "7.0.0",
-    junitVersion = "5.9.3",
-    slf4jVersion = "2.0.16",
-    assertjVersion = "3.26.3",
+def aspectjWeaver = "1.9.22",
+    selenideVersion = "6.13.0",
+    restAssuredVersion = "5.3.0",
     allureSelenideVersion = "2.21.0",
-    ownerVersion = "1.0.12",
+    junitVersion = "5.9.3",
+    slf4jVersion = "2.0.7",
     appiumVersion = "8.3.0"
+    
 
 
 allure
@@ -40,7 +39,7 @@ repositories {
 
 dependencies {
     testImplementation(
-             "org.aspectj:aspectjweaver:1.9.22",
+             "org.aspectj:aspectjweaver:$aspectjWeaver",
              "com.codeborne:selenide:$selenideVersion",
              "io.qameta.allure:allure-selenide:$allureSelenideVersion",
              "io.appium:java-client:$appiumVersion",
