--- a/build.gradle
+++ b/build.gradle
@@ -45,7 +45,7 @@ dependencies {
              "io.appium:java-client:$appiumVersion",
              "io.rest-assured:rest-assured:$restAssuredVersion",
              "org.junit.jupiter:junit-jupiter:$junitVersion",
-             "org.slf4j:slf4j-simple:$slf4jVersion",
+             "org.slf4j:slf4j-simple:$slf4jVersion"
     )
 }
 
