--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'java-library'
     id 'io.qameta.allure' version '2.11.2'
-    id "io.freefair.lombok" version "6.0.0-m2"
+    //id "io.freefair.lombok" version "6.0.0-m2"
 }
 
 def aspectjWeaver = "1.9.22",
@@ -28,8 +28,8 @@ allure {
     }
 }
 
-//group = 'ru.maxcong'
-//version = '1.0-SNAPSHOT'
+group = 'ru.maxcong'
+version = '1.0-SNAPSHOT'
 
 
 repositories {
