--- a/build.gradle
+++ b/build.gradle
@@ -62,6 +62,10 @@ tasks.withType(Test) {
     }
 }
 
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+}
+
 task browserstack(type: Test) {
     useJUnitPlatform {
         includeTags("browserstack")
